templates/deployment/types/host-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-host-network
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "true"
spec:
  rules:
  - http:
      paths:
      - path: /abc
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo-server-host-network
            port:
              number: 8080
